MAGETWO-887 Visual Design Editor Toolbar Panel Styling Updated VDE panel styling - CSS3 capabilities are used for round corners and shadows - Implemented relative font size instead of absolute - Slightly cleaned up styles

--- a/dev/tests/integration/testsuite/Mage/DesignEditor/Block/Toolbar/_files/_breadcrumbs_simple_product.html
+++ b/dev/tests/integration/testsuite/Mage/DesignEditor/Block/Toolbar/_files/_breadcrumbs_simple_product.html
@@ -9,7 +9,7 @@
  * @license     {license_link}
  */
 -->
-<div class="vde_breadcrumbs">
+<div id="vde_breadcrumbs">
     <a href="http://localhost/index.php/design/editor/page/page_type/default/">All Pages</a>
     <span class="vde_breadcrumbs_separator">/</span>
     <a href="http://localhost/index.php/design/editor/page/page_type/catalog_category_default/">Catalog Category (Non-Anchor)</a>
