Implemented MAGETWO-849: "Ajax Pages" Visual Distinction from Page Types in Visual Design Editor Toolbar - added CSS class for Page Fragment Types in VDE hierarchy - updated tests

--- a/dev/tests/integration/testsuite/Mage/DesignEditor/Block/Toolbar/_files/_page_types_hierarchy.html
+++ b/dev/tests/integration/testsuite/Mage/DesignEditor/Block/Toolbar/_files/_page_types_hierarchy.html
@@ -46,6 +46,9 @@
                     </li>
                 </ul>
             </li>
+            <li rel="catalogsearch_ajax_suggest" class="vde_option_fragment">
+                <a href="http://localhost/index.php/design/editor/page/item/catalogsearch_ajax_suggest/">Catalog Quick Search Form Suggestions</a>
+            </li>
         </ul>
     </li>
 </ul>
