Fixed MAGETWO-847: "Ajax Pages" in Page Types Hierarchy - added one test

--- a/dev/tests/integration/testsuite/Mage/DesignEditor/Block/Toolbar/_files/_handles_hierarchy.html
+++ b/dev/tests/integration/testsuite/Mage/DesignEditor/Block/Toolbar/_files/_handles_hierarchy.html
@@ -49,6 +49,14 @@
             <li rel="catalogsearch_ajax_suggest" class="vde_option_fragment">
                 <a href="http://localhost/index.php/design/editor/page/handle/catalogsearch_ajax_suggest/">Catalog Quick Search Form Suggestions</a>
             </li>
+            <li rel="checkout_onepage_index">
+                <a href="http://localhost/index.php/design/editor/page/handle/checkout_onepage_index/">One Page Checkout</a>
+                <ul>
+                    <li rel="checkout_onepage_progress" class="vde_option_fragment">
+                        <a href="http://localhost/index.php/design/editor/page/handle/checkout_onepage_progress/">One Page Checkout Progress</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </li>
 </ul>
