Implemented MAGETWO-3156: Replace Prototype Dialog which used in Inline Translate with jQuery analog - Prototype Dialog replaced with jQuery UI dialog widget

--- a/dev/tests/integration/testsuite/Mage/Core/Model/Translate/_files/_inline_page_expected.html
+++ b/dev/tests/integration/testsuite/Mage/Core/Model/Translate/_files/_inline_page_expected.html
@@ -23,6 +23,9 @@
 <link rel="stylesheet" type="text/css" href="http://localhost/pub/js/prototype/windows/themes/default.css"/>
 <link rel="stylesheet" type="text/css" href="http://localhost/pub/media/skin/frontend/default/default/en_US/Mage_Core/prototype/magento.css"/>
 
+<script type="text/javascript" src="<?php echo $design->getSkinUrl('jquery/jquery-1.7.1.min.js') ?>"></script>
+<script type="text/javascript" src="<?php echo $design->getSkinUrl('mage/jquery-no-conflict.js') ?>"></script>
+<script type="text/javascript" src="<?php echo $design->getSkinUrl('jquery/jquery-ui-1.8.18.custom.min.js') ?>"></script>
 <script type="text/javascript" src="http://localhost/pub/js/mage/translate_inline.js"></script>
 <link rel="stylesheet" type="text/css" href="http://localhost/pub/js/mage/translate_inline.css"/>
 
